--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "format": "prettier --write index.ts"
+    "format": "prettier --write index.ts",
+    "check-format": "prettier -c index.ts"
   },
   "repository": {
     "type": "git",
