--- a/package.json
+++ b/package.json
@@ -1,10 +1,20 @@
 {
   "name": "@axiomhq/vercel-next",
-  "version": "0.1.0",
   "description": "Send Web-Vitals from Vercel to Axiom.",
+  "version": "0.1.0",
+  "author": "Axiom, Inc.",
+  "license": "MIT",
+  "contributors": [
+    "Arne Bahlo <arne@axiom.co>"
+  ],
+  "engines": {
+    "node": ">=14"
+  },
   "main": "index.js",
+  "types": "index.d.ts",
   "scripts": {
     "build": "tsc",
+    "prepublish": "npm run build",
     "format": "prettier --write index.ts",
     "check-format": "prettier -c index.ts"
   },
@@ -19,8 +29,6 @@
     "performance",
     "nextjs"
   ],
-  "author": "Axiom <info@axiom.co>",
-  "license": "MIT",
   "bugs": {
     "url": "https://github.com/axiomhq/vercel-next/issues"
   },
