--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,16 +13,22 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: 17
       - run: npm install
       - run: npm run check-format
   build:
     name: Build
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node:
+          - 15.x
+          - 16.x
+          - 17.x
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: ${{ matrix.node }}
       - run: npm install
       - run: npm run build
