--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "build": "tsc",
     "prepare": "npm run build",
     "format": "prettier --write index.ts",
-    "check-format": "prettier -c index.ts"
+    "check-format": "prettier -c index.ts",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -37,8 +38,15 @@
     "next": "^12.1.4"
   },
   "devDependencies": {
+    "@types/jest": "^27.5.1",
     "@types/node": "^17.0.29",
+    "jest": "^28.1.0",
+    "jest-environment-jsdom": "^28.1.0",
     "prettier": "2.6.2",
+    "ts-jest": "^28.0.2",
     "typescript": "^4.6.4"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21"
   }
 }
