--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "jest-environment-jsdom": "^28.1.0",
     "prettier": "2.6.2",
     "ts-jest": "^28.0.2",
+    "ts-node": "^10.8.0",
     "typescript": "^4.6.4"
   },
   "dependencies": {
