--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
   "scripts": {
     "build": "tsc",
     "prepare": "npm run build",
-    "format": "prettier --write index.ts logger.ts __tests__/*.ts",
-    "check-format": "prettier -c index.ts logger.ts __tests__/*.ts",
+    "format": "prettier --write src/*.ts __tests__/*.ts",
+    "check-format": "prettier -c src/*.ts __tests__/*.ts",
     "test": "jest"
   },
   "repository": {
