--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,10 +29,11 @@
       "dom",
       "es2016",
       "es2017"
-    ]
+    ],
+    "outDir": "dist/"
   },
   "include": [
-    "index.ts"
+    "src/index.ts"
   ],
   "exclude": [
     "node_modules",
