extract withAxiom to index.ts

--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "engines": {
     "node": ">=15"
   },
-  "main": "index.js",
-  "types": "index.d.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
     "prepare": "npm run build",
