--- a/package.json
+++ b/package.json
@@ -49,8 +49,7 @@
     "typescript": "^4.6.4"
   },
   "dependencies": {
-    "cross-fetch": "^3.1.5",
-    "encoding": "^0.1.13",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "node-fetch": "^2.6.7"
   }
 }
