--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "typescript": "^4.6.4"
   },
   "dependencies": {
-    "lodash": "^4.17.21",
-    "node-fetch": "^2.6.7"
+    "cross-fetch": "^3.1.5",
+    "lodash": "^4.17.21"
   }
 }
