--- a/package.json
+++ b/package.json
@@ -49,7 +49,6 @@
     "typescript": "^4.6.4"
   },
   "dependencies": {
-    "cross-fetch": "^3.1.5",
-    "lodash": "^4.17.21"
+    "cross-fetch": "^3.1.5"
   }
 }
