--- a/package.json
+++ b/package.json
@@ -47,5 +47,8 @@
     "ts-jest": "^28.0.2",
     "ts-node": "^10.8.0",
     "typescript": "^4.6.4"
+  },
+  "dependencies": {
+    "isomorphic-fetch": "^3.0.0"
   }
 }
