--- a/examples/logger/package.json
+++ b/examples/logger/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "next": "12.1.4",
-    "next-axiom": "github:axiomhq/next-axiom#150327c7c2b2b48f0003fc3b6d03fc0e06b7ba17",
+    "next-axiom": "github:axiomhq/next-axiom#main",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "swr": "^1.3.0"
