--- a/examples/logger/package.json
+++ b/examples/logger/package.json
@@ -7,7 +7,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.1.4",
+    "next": "^12.2.0",
     "next-axiom": "file:../../",
     "react": "18.0.0",
     "react-dom": "18.0.0",
@@ -18,3 +18,4 @@
     "eslint-config-next": "12.1.4"
   }
 }
+
