--- a/.github/workflows/cla.yml
+++ b/.github/workflows/cla.yml
@@ -19,9 +19,9 @@ jobs:
           PERSONAL_ACCESS_TOKEN : ${{ secrets.CLA_ACCESS_TOKEN }}
         with:
           path-to-signatures: 'signatures/cla.json'
-          path-to-document: 'https://github.com/axiomhq/next-axiom/blob/main/CLA.md' # e.g. a CLA or a DCO document
+          path-to-document: 'https://github.com/axiomhq/next-axiom/blob/add-cla/CLA.md' # e.g. a CLA or a DCO document
           # branch should not be protected
-          branch: 'main'
+          branch: 'add-cla'
           allowlist: user1,bot*
 
          #below are the optional inputs - If the optional inputs are not given, then default values will be taken
