--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
   },
   "homepage": "https://github.com/axiomhq/next-axiom#readme",
   "peerDependencies": {
-    "next": "^12.1.4 || ^13"
+    "next": "^12.1.4 || ^13",
+    "web-vitals": "^3.1.1"
   },
   "devDependencies": {
     "@types/jest": "^27.5.1",
@@ -49,7 +50,7 @@
     "typescript": "^4.6.4"
   },
   "dependencies": {
-    "web-vitals": "^3.1.1",
+    "client-only": "^0.0.1",
     "whatwg-fetch": "^3.6.2"
   }
 }
