separate unit tests from e2e

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "prepare": "npm run build",
     "format": "prettier --write src/*.ts __tests__/*.ts",
     "check-format": "prettier -c src/*.ts __tests__/*.ts",
-    "test": "jest"
+    "test": "jest __tests__/"
   },
   "repository": {
     "type": "git",
