move AXIOM_LOG_LEVEL to NEXT_PUBLIC_AXIOM_LOG_LEVEL

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
     name: Check Tests
     runs-on: ubuntu-latest
     env:
-      AXIOM_INGEST_ENDPOINT: https://example.co/api/test
+      NEXT_PUBLIC_AXIOM_INGEST_ENDPOINT: https://example.co/api/test
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
