--- a/e2e/package.json
+++ b/e2e/package.json
@@ -24,6 +24,7 @@
     "@types/node": "^18.11.10",
     "@types/react": "^18.0.25",
     "jest": "^29.5.0",
-    "ts-jest": "^29.1.0"
+    "ts-jest": "^29.1.0",
+    "typescript": "^4.6.4"
   }
 }
