--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,7 @@ jobs:
       - unittests
     runs-on: ubuntu-latest
     env:
-      BASE_URL: 'https://next-axiom-e2e.vercel.app'
+      BASE_URL: 'https://next-axiom-e2e.axiom.dev'
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
