--- a/e2e/package.json
+++ b/e2e/package.json
@@ -11,13 +11,10 @@
   },
   "dependencies": {
     "@axiomhq/axiom-node": "^0.11.0",
-    "eslint": "8.28.0",
-    "eslint-config-next": "13.0.5",
     "next": "13.0.5",
     "next-axiom": "file:../",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "web-vitals": "^3.3.0"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@types/jest": "^29.5.0",
@@ -25,6 +22,8 @@
     "@types/react": "^18.0.25",
     "jest": "^29.5.0",
     "ts-jest": "^29.1.0",
-    "typescript": "^4.6.4"
+    "typescript": "^4.6.4",
+    "eslint": "8.28.0",
+    "eslint-config-next": "13.0.5"
   }
 }
