cd into e2e and run npm install

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,7 +46,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 17
-      - run: npm install
+      - run: cd e2e && npm install
       - run: npm run e2e
   build:
     name: Build
