build next-axiom before running e2e

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,6 +46,8 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 18
+      - run: npm install
+      - run: npm run build
       - run: cd e2e && npm install
       - run: npm run e2e
   build:
