--- a/examples/app-directory/package.json
+++ b/examples/app-directory/package.json
@@ -15,6 +15,7 @@
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "next": "13.3.0",
+    "next-axiom": "file:../../",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.0.4"
