--- a/turbo.json
+++ b/turbo.json
@@ -34,6 +34,7 @@
         },
         // A package's `lint` script has no dependencies and
         // can be run whenever. It also has no filesystem outputs.
-        "lint": {}
+        "lint": {},
+        "format": {}
     }
 }
