--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,9 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node }}
+          cache: "npm"
+          registry-url: "https://registry.npmjs.org"
+          cache-dependency-path: package-lock.json
       - run: npm install
       - run: npm run build
       - run: npm run lint
@@ -39,6 +42,9 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 16
+          cache: "npm"
+          registry-url: "https://registry.npmjs.org"
+          cache-dependency-path: package-lock.json
       - run: npm install
       - run: npm run build
       - run: npm test
@@ -55,6 +61,7 @@ jobs:
           node-version: ${{ env.NODEVERSION }}
           cache: "npm"
           registry-url: "https://registry.npmjs.org"
+          cache-dependency-path: package-lock.json
       - run: npm install
       - run: npm publish --access public
         env:
