--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "devDependencies": {
     "@types/jest": "^27.5.1",
     "@types/node": "^17.0.29",
+    "@jest/globals": "^29.3.1",
     "jest": "^28.1.0",
     "jest-environment-jsdom": "^29.5.0",
     "prettier": "2.6.2",
