make withAxiom support next13 routes

--- a/packages/next-axiom/package.json
+++ b/packages/next-axiom/package.json
@@ -38,6 +38,7 @@
     "next-axiom-core": "*"
   },
   "peerDependencies": {
-    "next": ">=13.4"
+    "next": ">=13.4",
+    "react": ">18"
   }
 }
