--- a/examples/app-directory/package.json
+++ b/examples/app-directory/package.json
@@ -10,13 +10,13 @@
   },
   "dependencies": {
     "next": "^13.4.0",
-    "next-axiom": "*",
+    "next-axiom": "workspace:*",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@types/react": "18.0.37",
-    "@types/react-dom": "18.0.11",
-    "eslint-config-next": "13.3.0"
+    "@types/react": "^18.0.37",
+    "@types/react-dom": "^18.0.11",
+    "eslint-config-next": "^13.4.0"
   }
 }
