--- a/packages/next12-axiom/package.json
+++ b/packages/next12-axiom/package.json
@@ -35,7 +35,7 @@
   },
   "homepage": "https://github.com/axiomhq/next-axiom#readme",
   "dependencies": {
-    "next-axiom-core": "*"
+    "next-axiom-core": "workspace:*"
   },
   "peerDependencies": {
     "next": ">=12.2.0 <13.0.0"
