--- a/package.json
+++ b/package.json
@@ -35,17 +35,17 @@
   "homepage": "https://github.com/axiomhq/next-axiom#readme",
   "devDependencies": {
     "@jest/globals": "^29.3.1",
-    "@types/jest": "^27.5.1",
     "@types/node": "^17.0.29",
     "@typescript-eslint/eslint-plugin": "^5.59.11",
     "@typescript-eslint/parser": "^5.59.11",
     "eslint": "~8.41.0",
     "eslint-config-turbo": "^1.10.3",
     "eslint-plugin-react": "^7.32.2",
-    "jest": "^28.1.0",
+    "jest": "^29.0.0",
+    "jest-config": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "prettier": "2.6.2",
-    "ts-jest": "^28.0.2",
+    "ts-jest": "^29.1.0",
     "ts-node": "^10.8.0",
     "turbo": "^1.9.9",
     "typescript": "^4.6.4"
