prepare next-axiom-core for release

--- a/packages/next-axiom-core/package.json
+++ b/packages/next-axiom-core/package.json
@@ -1,10 +1,9 @@
 {
   "name": "next-axiom-core",
-  "description": "Send WebVitals from your Next.js project to Axiom.",
+  "description": "Core utils of axiom support for Next.js",
   "version": "0.18.0",
   "author": "Axiom, Inc.",
   "license": "MIT",
-  "private": true,
   "contributors": [
     "Arne Bahlo <arne@axiom.co>",
     "Islam Shehata <islam@axiom.co>"
