--- a/packages/next12-axiom/package.json
+++ b/packages/next12-axiom/package.json
@@ -11,10 +11,13 @@
   "engines": {
     "node": ">=16"
   },
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "dist/next12-axiom.umd.js",
+  "module": "dist/next12-axiom.es.js",
+  "types": "dist/types/index.d.ts",
+  "files": ["dist"],
   "scripts": {
-    "build": "tsc -b",
+    "exportTypes": "rm tsconfig.tsbuildinfo && tsc -b -v",
+    "build": "vite build && pnpm run exportTypes",
     "format": "prettier --write src/*.ts test/*.ts",
     "lint": "prettier -c src/*.ts test/*.ts",
     "test": "jest"
@@ -39,5 +42,12 @@
   },
   "peerDependencies": {
     "next": ">=12.2.0 <13.0.0"
+  },
+  "exports": {
+    ".": {
+      "import": "./dist/next12-axiom.es.js",
+      "require": "./dist/next12-axiom.umd.js",
+      "types": "./dist/types/index.d.ts"
+    }
   }
 }
