--- a/packages/next12-axiom/tsconfig.json
+++ b/packages/next12-axiom/tsconfig.json
@@ -14,12 +14,15 @@
     "forceConsistentCasingInFileNames": true,
     "declaration": true,
     "declarationMap": true,
+    "declarationDir": "./dist/types/",
+    "emitDeclarationOnly": true,
     "incremental": true,
     "noImplicitReturns": true,
     "noImplicitThis": true,
     "noImplicitAny": false,
     "strictPropertyInitialization": false,
     "noUnusedLocals": true,
+    "isolatedModules": true,
     /* Debugging Options */
     "traceResolution": false /* Report module resolution log messages. */,
     "listEmittedFiles": false /* Print names of generated files part of the compilation. */,
