--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "ts-node": "^10.8.0",
     "turbo": "^1.9.9",
     "typescript": "^4.6.4",
-    "vite": "^4.3.9"
+    "vite": "^4.3.9",
+    "next-axiom-core": "workspace:*"
   },
   "workspaces": [
     "packages/*",
