--- a/package.json
+++ b/package.json
@@ -45,13 +45,14 @@
     "jest": "~29.1",
     "jest-config": "~29.1",
     "jest-environment-jsdom": "~29.1",
+    "next-axiom-core": "workspace:*",
     "prettier": "2.6.2",
+    "rollup-plugin-preserve-directives": "^0.2.0",
     "ts-jest": "~29.1",
     "ts-node": "^10.8.0",
     "turbo": "^1.9.9",
-    "typescript": "^4.6.4",
-    "vite": "^4.3.9",
-    "next-axiom-core": "workspace:*"
+    "typescript": "latest",
+    "vite": "^4.3.9"
   },
   "workspaces": [
     "packages/*",
