--- a/packages/next12-axiom/tsconfig.json
+++ b/packages/next12-axiom/tsconfig.json
@@ -7,7 +7,7 @@
     "sourceMap": true,
     "strict": true,
     "moduleResolution": "node",
-    "composite": true,
+    // "composite": true,
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
@@ -15,8 +15,7 @@
     "declaration": true,
     "declarationMap": true,
     "declarationDir": "./dist/types/",
-    "emitDeclarationOnly": true,
-    "incremental": true,
+    // "incremental": true,
     "noImplicitReturns": true,
     "noImplicitThis": true,
     "noImplicitAny": false,
