--- a/internal/next-axiom-core/package.json
+++ b/internal/next-axiom-core/package.json
@@ -12,12 +12,21 @@
   "engines": {
     "node": ">=16"
   },
-  "main": "src/index.ts",
-  "types": "src/index.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
+    "build": "tsup",
     "format": "prettier --write src/*.ts test/*.ts",
     "lint": "prettier -c src/*.ts test/*.ts",
-    "test": "jest"
+    "test": "jest",
+    "clean": "rm -rf dist tsconfig.tsbuildinfo"
+  },
+  "tsup": {
+    "entry": ["src/**/*.ts"],
+    "splitting": false,
+    "sourcemap": true,
+    "clean": true,
+    "dts": true
   },
   "repository": {
     "type": "git",
