--- a/internal/next-axiom-core/tsconfig.json
+++ b/internal/next-axiom-core/tsconfig.json
@@ -6,7 +6,6 @@
     "allowJs": false,
     "sourceMap": true,
     "strict": true,
-    // "composite": true,
     "moduleResolution": "NodeNext",
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
@@ -31,7 +30,7 @@
     "outDir": "dist/",
     "rootDir": "src/"
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "package.json"],
   "exclude": ["node_modules", "dist"],
   "compileOnSave": true,
 }
