--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "homepage": "https://github.com/axiomhq/next-axiom#readme",
   "devDependencies": {
     "@jest/globals": "~29.1",
+    "@swc/core": "^1.3.68",
     "@types/node": "^17.0.29",
     "@typescript-eslint/eslint-plugin": "^5.59.11",
     "@typescript-eslint/parser": "^5.59.11",
@@ -51,6 +52,7 @@
     "rollup-plugin-preserve-directives": "^0.2.0",
     "ts-jest": "~29.1",
     "ts-node": "^10.8.0",
+    "tsup": "^7.1.0",
     "turbo": "^1.9.9",
     "typescript": "latest",
     "vite": "^4.3.9"
