attempt to bundle using babel

--- a/.npmrc
+++ b/.npmrc
@@ -4,3 +4,4 @@
 #And that means fewer surprises! This option tells pnpm to only resolve local deps to the local files when the workspace: protocol is used, 
 # and to otherwise download published versions.
 link-workspace-packages=false
+enable-pre-post-scripts=true
