--- a/internal/kit/package.json
+++ b/internal/kit/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "next-axiom-core",
-  "description": "Core utils of axiom support for Next.js",
-  "version": "0.19.0",
+  "name": "@axiomhq/kit",
+  "description": "A collection of utils to build on top of Axiom",
+  "version": "0.1.0",
+  "private": true,
   "author": "Axiom, Inc.",
   "license": "MIT",
   "contributors": [
@@ -11,13 +12,14 @@
   "engines": {
     "node": ">=16"
   },
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "src/index.ts",
+  "types": "src/index.ts",
   "scripts": {
-    "build": "tsc -b",
+    "build": "tsc -b && babel --root-mode upward src --out-dir dist/ --extensions \".tsx,.ts,.js,.jsx\"",
     "format": "prettier --write src/*.ts test/*.ts",
     "lint": "prettier -c src/*.ts test/*.ts",
-    "test": "jest"
+    "test": "jest",
+    "clear": "rm tsconfig.tsbuildinfo && rm -rf dist"
   },
   "repository": {
     "type": "git",
