--- a/internal/kit/tsconfig.json
+++ b/internal/kit/tsconfig.json
@@ -15,6 +15,7 @@
     "declaration": true,
     "declarationMap": true,
     "incremental": true,
+    "emitDeclarationOnly": true,
     "noImplicitReturns": true,
     "noImplicitThis": true,
     "noImplicitAny": false,
@@ -25,21 +26,11 @@
     "listEmittedFiles": false /* Print names of generated files part of the compilation. */,
     "listFiles": false /* Print names of files part of the compilation. */,
     "pretty": true /* Stylize errors and messages using color and context. */,
-    "lib": [
-      "es6",
-      "dom",
-      "es2016",
-      "es2017"
-    ],
+    "lib": ["es6", "dom", "es2016", "es2017"],
     "outDir": "dist/",
     "rootDir": "src/"
   },
-  "include": [
-    "src/**/*.ts"
-  ],
-  "exclude": [
-    "node_modules",
-    "dist",
-  ],
-  "compileOnSave": true
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist"],
+  "compileOnSave": true,
 }
