--- a/package.json
+++ b/package.json
@@ -34,10 +34,16 @@
   },
   "homepage": "https://github.com/axiomhq/next-axiom#readme",
   "devDependencies": {
+    "@babel/cli": "^7.22.9",
+    "@babel/core": "^7.22.9",
+    "@babel/preset-react": "^7.22.5",
+    "@babel/preset-typescript": "^7.22.5",
     "@jest/globals": "~29.1",
     "@types/node": "^17.0.29",
     "@typescript-eslint/eslint-plugin": "^5.59.11",
     "@typescript-eslint/parser": "^5.59.11",
+    "babel-plugin-module-resolver": "^5.0.0",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "eslint": "~8.41.0",
     "eslint-config-turbo": "^1.10.3",
     "eslint-plugin-react": "^7.32.2",
@@ -51,6 +57,7 @@
     "typescript": "^5.1.6"
   },
   "workspaces": [
+    "internal/*",
     "packages/*",
     "examples/*",
     "e2e/*"
