--- a/packages/next-axiom/tsconfig.json
+++ b/packages/next-axiom/tsconfig.json
@@ -15,6 +15,7 @@
     "declaration": true,
     "declarationMap": true,
     "incremental": true,
+    "emitDeclarationOnly": true,
     "noImplicitReturns": true,
     "noImplicitThis": true,
     "noImplicitAny": false,
