--- a/internal/kit/package.json
+++ b/internal/kit/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "next-axiom-core",
-  "description": "Core utils of axiom support for Next.js",
-  "version": "0.19.0",
+  "name": "@axiomhq/kit",
+  "description": "Collection of utils to build on top of Axiom",
+  "version": "0.1.0",
+  "private": true,
   "author": "Axiom, Inc.",
   "license": "MIT",
   "contributors": [
@@ -17,7 +18,8 @@
     "build": "tsc -b",
     "format": "prettier --write src/*.ts test/*.ts",
     "lint": "prettier -c src/*.ts test/*.ts",
-    "test": "jest"
+    "test": "jest",
+    "clean": "rm -rf dist && rm tsconfig.tsbuildinfo"
   },
   "repository": {
     "type": "git",
